<resources>
    <string name="app_name">Edunomics</string>
    <string name="emailHintText">Email Address</string>
    <string name="usernameHintText">Username</string>
    <string name="passwordHintText">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="mainTitle">Welcome to the world of Edunomics</string>
    <string name="registerButtonText">Register</string>
    <string name="subtiteRegistration">Fill the details to get started</string>
    <string name="subtiteLogin">Login in to continue</string>
    <string name="search">Start Typing to Search</string>
    <string name="confirmPasswordHintText">Confirm Password</string>
    <string name="title">Welcome back!</string>
    <string name="registrationTitle">Let\'s catch up!</string>
    <string name="landingTitle">Hola! Let\'s get started</string>
    <string name="landingUsername">Logged in as</string>
    <string name="chatTitle">Chats</string>
    <string name="logoutTitle">Logout</string>
    <string name="newUser">New here?</string>
    <string name="forgotPassword">Forgot Password?</string>
</resources>