<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="171dp"
        android:layout_height="47dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/circular_std_black"
        android:text="@string/registerButtonText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorBackground"
        android:textSize="18sp"
        android:typeface="normal"
        android:onClick="onClickRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="171dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/circular_std_black"
        android:text="@string/loginButtonText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorBackground"
        android:textSize="18sp"
        android:typeface="normal"
        android:onClick="onClickLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/vectorView"
        android:layout_width="351dp"
        android:layout_height="282dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/ic_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="402dp"
        android:layout_height="131dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_foreground" />

    <TextView
        android:id="@+id/messageViewSlide"
        android:layout_width="357dp"
        android:layout_height="196dp"
        android:layout_marginTop="40dp"
        android:text="@string/mainTitle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vectorView" />

</androidx.constraintlayout.widget.ConstraintLayout>